--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,6 +13,6 @@ html, body, #root, .bg-app {
     width: 100%; 
     margin: 0; 
     padding: 0;
-    background-color: rgb(165, 83, 242);
+    background-color: #3495fc
 
 }
