--- a/src/styles/UserList.scss
+++ b/src/styles/UserList.scss
@@ -56,9 +56,10 @@
 
   // Pagination
   .btn-pagination {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+    display: flex; /* Sử dụng flexbox */
+    justify-content: flex-end; /* Đẩy nút sang bên phải */
+    margin-top: 10px;
+    gap: 10px;
   }
 
   .btn-pagination button {
